@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.176 2005/10/18 03:09:40 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.177 2005/10/23 17:58:39 agaffney Exp $
 
-*GLI-gtkfe-0.2 (17 Oct 2005)
+*GLI-gtkfe-0.3 (17 Oct 2005)
+
+  22 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  add tab for tailing the log file
 
 *GLI-gtkfe-0.2 (17 Oct 2005)
 
